--- a/spin.html
+++ b/spin.html
@@ -176,7 +176,7 @@
 
     <canvas id="wheel"  width="400" height="400"></canvas>
 
-<img id="bottle" src="./bts.jpg" >
+<img id="bottle" src="./botttleee.png" >
 
 <div id="actionButtons" style="display:none; text-align:center;">
     <h2 id="selectedName"></h2>
